# kxcj9-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml
examples/: linux.rs
src/: conversion.rs  device_impl.rs  kxcj9.rs  lib.rs  scale_measurement.rs  scaled_device.rs  types.rs
tests/: integration.rs  interrupts.rs  reading.rs
tests/common/: mod.rs
