[package]
name = "kxcj9"
version = "0.2.0"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/kxcj9-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the KXCJ9 and KXCJB ultra-low-power tri-axis accelerometers."
readme = "README.md"
keywords = ["accelerometer", "mems", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/kxcj9-rs"
documentation = "https://docs.rs/kxcj9"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]

[badges]
coveralls = { repository = "eldruin/kxcj9-rs", branch = "master", service = "github" }

[dependencies]
embedded-hal = "0.2"
nb = "1"

[dev-dependencies]
linux-embedded-hal = "0.3"
embedded-hal-mock = "0.7"

[profile.release]
lto = true
